--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,26 @@ img {
     max-width: 100%;
 }
 
+/* Superinfo */
+
+.superinfo-bg {
+    background-color: #122ab2;
+    color: #fff;
+}
+
+.superinfo {
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 10px;
+}
+
+.superinfo p, .superinfo a {
+    margin: 0 10px 10px 10px;
+}
+
+.superinfo a {
+    color: #fff;
+}
